# Todo_cicd

./: .gitignore  .gitlab-ci.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_main.py
frontend/src/: App.css  App.jsx  index.css
